--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Tvillingar</title>
+</head>
+<body style="font-family:sans-serif; background:#fff0f5; text-align:center; padding:30px">
 
+  <h1>Tvillingar</h1>
+  <p>Bienvenida a nuestra tienda 💖</p>
+
+  <p>Próximamente productos</p>
+
+</body>
+</html>
