--- a/index.html
+++ b/index.html
@@ -13,3 +13,48 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Tvillingar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body style="margin:0; font-family:Arial, sans-serif; background:#f7f0ff; color:#4a3f55;">
+
+  <header style="
+    background: linear-gradient(135deg, #f6b6d8, #d9c7ff);
+    padding:30px; text-align:center; color:white;">
+    <h1 style="margin:0;">Tvillingar</h1>
+    <p style="margin-top:10px;">Productos femeninos, delicados y modernos 💕</p>
+  </header>
+
+  <section style="padding:25px; max-width:600px; margin:auto;">
+    <div style="
+      background:white; border-radius:18px; padding:20px;
+      box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;">
+      <h2>Comprar</h2>
+      <p>Compra fácilmente por WhatsApp</p>
+      <a href="https://wa.me/569XXXXXXXX" target="_blank"
+         style="display:block; text-align:center; background:#c77dff;
+                color:white; padding:14px; border-radius:30px; text-decoration:none;">
+        Comprar por WhatsApp
+      </a>
+    </div>
+
+    <div style="
+      background:white; border-radius:18px; padding:20px;
+      box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+      <h2>Contacto</h2>
+      <p>Correo electrónico:</p>
+      <strong>tucorreo@email.com</strong>
+    </div>
+  </section>
+
+  <footer style="text-align:center; padding:20px; color:#8a7ca8;">
+    © 2026 Tvillingar
+  </footer>
+
+</body>
+      </html>
