--- a/index.html
+++ b/index.html
@@ -58,3 +58,79 @@
 
 </body>
       </html>
+<section style="padding:25px; max-width:900px; margin:auto;">
+  <h2 style="text-align:center; margin-bottom:20px;">
+    Nuestros productos
+  </h2>
+
+  <div style="
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap:20px;
+  ">
+
+    <div style="
+      background:#ffffff;
+      border-radius:18px;
+      padding:15px;
+      text-align:center;
+      box-shadow:0 6px 18px rgba(0,0,0,0.08);
+    ">
+      <div style="
+        height:200px;
+        background:#f0e6ff;
+        border-radius:12px;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        color:#8a7ca8;
+      ">
+        Foto del producto
+      </div>
+      <p style="margin-top:10px;">Producto 1</p>
+    </div>
+
+    <div style="
+      background:#ffffff;
+      border-radius:18px;
+      padding:15px;
+      text-align:center;
+      box-shadow:0 6px 18px rgba(0,0,0,0.08);
+    ">
+      <div style="
+        height:200px;
+        background:#f0e6ff;
+        border-radius:12px;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        color:#8a7ca8;
+      ">
+        Foto del producto
+      </div>
+      <p style="margin-top:10px;">Producto 2</p>
+    </div>
+
+    <div style="
+      background:#ffffff;
+      border-radius:18px;
+      padding:15px;
+      text-align:center;
+      box-shadow:0 6px 18px rgba(0,0,0,0.08);
+    ">
+      <div style="
+        height:200px;
+        background:#f0e6ff;
+        border-radius:12px;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        color:#8a7ca8;
+      ">
+        Foto del producto
+      </div>
+      <p style="margin-top:10px;">Producto 3</p>
+    </div>
+
+  </div>
+      </section>
