--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style="
+ok <div style="
   background:#ffffff;
   border-radius:18px;
   padding:15px;
@@ -152,4 +152,23 @@
     </div>
 
   </div>
-      </section>
+      </section><div style="background:#ffffff; border-radius:18px; padding:15px; text-align:center; box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+  <div style="height:200px; background:#f0e6ff; border-radius:12px; display:flex; align-items:center; justify-content:center; color:#8a7ca8;">
+    Foto del producto
+  </div>
+  <p style="margin-top:10px;">Producto 4</p>
+</div>
+
+<div style="background:#ffffff; border-radius:18px; padding:15px; text-align:center; box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+  <div style="height:200px; background:#f0e6ff; border-radius:12px; display:flex; align-items:center; justify-content:center; color:#8a7ca8;">
+    Foto del producto
+  </div>
+  <p style="margin-top:10px;">Producto 5</p>
+</div>
+
+<div style="background:#ffffff; border-radius:18px; padding:15px; text-align:center; box-shadow:0 6px 18px rgba(0,0,0,0.08);">
+  <div style="height:200px; background:#f0e6ff; border-radius:12px; display:flex; align-items:center; justify-content:center; color:#8a7ca8;">
+    Foto del producto
+  </div>
+  <p style="margin-top:10px;">Producto 6</p>
+</div>
