--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-ok <div style="
+<a href="https://wa.me/569XXXXXXXX?text=Hola,%20quiero%20comprar%20este%20producto"
+   target="_blank"
+   style="
+     display:block;
+     margin-top:10px;
+     background:#25D366;
+     color:white;
+     padding:10px;
+     border-radius:25px;
+     text-decoration:none;
+     font-size:14px;
+     font-weight:bold;
+   ">
+  Comprar por WhatsApp
+</a>ok <div style="
   background:#ffffff;
   border-radius:18px;
   padding:15px;
