--- a/index.html
+++ b/index.html
@@ -185,4 +185,4 @@
     Foto del producto
   </div>
   <p style="margin-top:10px;">Producto 6</p>
-</div>
+</div><title>Tienda de productos femeninos | Tvillingar</title>
