--- a/index.html
+++ b/index.html
@@ -185,4 +185,4 @@
     Foto del producto
   </div>
   <p style="margin-top:10px;">Producto 6</p>
-</div><title>Tienda de productos femeninos | Tvillingar</title>
+</div><title>Tienda de productos femeninos | Tvillingar</title><meta name="description" content="Tienda online de productos femeninos. Accesorios, regalos y detalles delicados para mujeres. Compra fácil por WhatsApp.">
