--- a/index.html
+++ b/index.html
@@ -206,4 +206,31 @@
     font-weight:bold;
   ">
     📍 Hago entrega de forma presencial en metro Protectora de la Infancia.
+    <section style="padding:20px; max-width:800px; margin:auto;">
+  <div style="
+    background:#ffffff;
+    border-radius:15px;
+    padding:18px;
+    text-align:center;
+    box-shadow:0 4px 12px rgba(0,0,0,0.08);
+  ">
+    <h3 style="margin-top:0;">Contacto</h3>
+
+    <p style="margin:8px 0;">
+      📧 Correo:
+      <a href="mailto:mgutierrez40_@hotmail.com" style="color:#00bcd4; text-decoration:none;">
+        mgutierrez40_@hotmail.com
+      </a>
+    </p>
+
+    <p style="margin:8px 0;">
+      📲 WhatsApp:
+      <a href="https://wa.me/56947510065" target="_blank"
+         style="color:#00bcd4; text-decoration:none;">
+        +56 9 4751 0065
+      </a>
+    </p>
+  </div>
+</section>
+
  
