--- a/index.html
+++ b/index.html
@@ -163,48 +163,7 @@
     box-shadow:0 4px 12px rgba(0,0,0,0.08);
     font-weight:bold;
   ">
-    📍 Hago entrega de forma presencial en metro Protectora de la Infancia.
-  </div>
-</section>
-
-     display:block;
-     margin-top:10px;
-     background:#25D366;
-     color:white;
-     padding:10px;
-     border-radius:25px;
-     text-decoration:none;
-     font-size:14px;
-     font-weight:bold;
-   ">
-  Comprar por WhatsApp
-</a>ok <div style="
-  background:#ffffff;
-  border-radius:18px;
-  padding:15px;
-  text-align:center;
-  box-shadow:0 6px 18px rgba(0,0,0,0.08);
-">
-  <div style="
-    height:200px;
-    background:#f0e6ff;
-    border-radius:12px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    color:#8a7ca8;
-      <a href="https://wa.me/569XXXXXXXX?text=Hola,%20quiero%20comprar%20este%20producto"
-   target="_blank"
-   style="
-   <section style="padding:20px; max-width:800px; margin:auto;">
-  <div style="
-    background:#ffffff;
-    border-radius:15px;
-    padding:15px;
-    text-align:center;
-    box-shadow:0 4px 12px rgba(0,0,0,0.08);
-    font-weight:bold;
-  ">
+    
     📍 Hago entrega de forma presencial en metro Protectora de la Infancia.
     <section style="padding:20px; max-width:800px; margin:auto;">
   <div style="
@@ -232,5 +191,12 @@
     </p>
   </div>
 </section>
+     <p style="margin:8px 0;">
+      📧 Correo:
+      <a href="mailto:mgutierrez40_@hotmail.com" style="color:#00bcd4; text-decoration:none;">
+        mgutierrez40_@hotmail.com
+      </a>
+    </p>
+
 
  
