--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       box-shadow:0 6px 18px rgba(0,0,0,0.08); margin-bottom:20px;">
       <h2>Comprar</h2>
       <p>Compra fácilmente por WhatsApp</p>
-      <a href="https://wa.me/569XXXXXXXX" target="_blank"
+      <a href="https://wa.me/56947510065 target="_blank"
          style="display:block; text-align:center; background:#c77dff;
                 color:white; padding:14px; border-radius:30px; text-decoration:none;">
         Comprar por WhatsApp
@@ -46,7 +46,7 @@
       box-shadow:0 6px 18px rgba(0,0,0,0.08);">
       <h2>Contacto</h2>
       <p>Correo electrónico:</p>
-      <strong>tucorreo@email.com</strong>
+      <strong>mgutierrez40_@hotmail.com</strong>
     </div>
   </section>
 
