--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body style="font-family:sans-serif; background:#fff0f5; text-align:center; padding:30px">
 
   <h1>Tvillingar</h1>
-  <p>Bienvenida a nuestra tienda 💖</p>
+  <p>Bienvenid0 a nuestra tienda 💖</p>
 
   <p>Próximamente productos</p>
 
@@ -25,7 +25,7 @@
     background: linear-gradient(135deg, #f6b6d8, #d9c7ff);
     padding:30px; text-align:center; color:white;">
     <h1 style="margin:0;">Tvillingar</h1>
-    <p style="margin-top:10px;">Productos femeninos, delicados y modernos 💕</p>
+    <p style="margin-top:10px;">Productos mixtos,delicados y modernos como ropa para bebe,bolsos tejidos a crochet,ponchos,amigurumis,carteras para celular,gorros para el invierno,bufandas y mucho mas.Productos tejidos de calidad.  💕</p>
   </header>
 
   <section style="padding:25px; max-width:600px; margin:auto;">
