--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body style="font-family:sans-serif; background:#fff0f5; text-align:center; padding:30px">
 
   <h1>Tvillingar</h1>
-  <p>Bienvenid0 a nuestra tienda 💖</p>
+  <p>Bienvenido a nuestra tienda 💖</p>
 
   <p>Próximamente productos</p>
 
