--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="google-site-verification" content="EYE07bCPifz5G8cyRsW8pn8DSq8yLi_F7kfKRgH-Hfs" />
   <meta charset="UTF-8">
   <title>Tvillingar</title>
 </head>
