--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <head>
   <meta name="google-site-verification" content="EYE07bCPifz5G8cyRsW8pn8DSq8yLi_F7kfKRgH-Hfs" />
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"><meta name="google-site-verification" content="EYE07bCPifz5G8cyRsW8pn8DSq8yLi_F7kfKRgH-Hfs" />
   <title>Tvillingar</title>
 </head>
+<meta name="google-site-verification" content="EYE07bCPifz5G8cyRsW8pn8DSq8yLi_F7kfKRgH-Hfs" />
 <body style="font-family:sans-serif; background:#fff0f5; text-align:center; padding:30px">
 
   <h1>Tvillingar</h1>
