--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <h1>Tvillingar</h1>
   <p>Bienvenido a nuestra tienda 💖</p>
 
-  <p>Próximamente productos</p>
+  <p>Próximamente productos</p><section style="padding:20px; max-width:800px; margin:auto;">
+  <p>
+    Ofrezco productos a crochet hechos a mano con dedicación y amor.
+    Aquí encontrarás tejidos a crochet, accesorios y regalos ideales
+    para quienes buscan productos únicos y artesanales.
+  </p>
+</section>
+
 
 </body>
 </html>
