--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <meta charset="UTF-8">
   <title>Tvillingar</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+</head><meta name="description" content="Productos a crochet hechos a mano. Tejidos, accesorios y regalos a crochet. Entrega presencial en metro Protectora de la Infancia y pedidos por WhatsApp.">
+
 
 <body style="margin:0; font-family:Arial, sans-serif; background:#f7f0ff; color:#4a3f55;">
 
