--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     Aquí encontrarás tejidos a crochet, accesorios y regalos ideales
     para quienes buscan productos únicos y artesanales.
   </p>
-</section>
+</section><meta name="keywords" content="productos a crochet, tejidos a mano, crochet chile, regalos tejidos, crochet artesanal, accesorios a crochet">
+
 
 
 </body>
