--- a/index.html
+++ b/index.html
@@ -208,6 +208,22 @@
         mgutierrez40_@hotmail.com
       </a>
     </p>
+<div style="max-width:300px; margin:20px auto; padding:15px; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.1); text-align:center;">
+  
+  <img src="poncho tejido a crochet" alt="Producto a crochet" style="width:100%; border-radius:10px;">
+
+  <h3>Producto a crochet</h3>
+
+  <p>Hecho a mano con amor 💕</p>
+
+  <a href="https://wa.me/56947510065" target="_blank"
+     style="display:block; margin-top:10px; background:#000; color:#fff; padding:10px; border-radius:8px; text-decoration:none;">
+     Comprar por WhatsApp
+  </a>
+
+</div>
+   agregar producto con imagen
+ 
 
 
  
