--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@
     </p>
 <div style="max-width:300px; margin:20px auto; padding:15px; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.1); text-align:center;">
   
-  <img src="poncho tejido a crochet" alt="Producto a crochet" style="width:100%; border-radius:10px;">
+  <img src="" alt="Producto a croch<img src="poncho.png" alt="Poncho a crochet" style="width:100%; border-radius:10px;">
+et" style="width:100%; border-radius:10px;">
 
   <h3>Producto a crochet</h3>
 
