--- a/index.html
+++ b/index.html
@@ -132,11 +132,14 @@
   <h3>Producto a crochet</h3>
 
   <p>Hecho a mano con amor 💕</p>
+        <img src="poncho.png" style="width:300px; max-width:90%; border-radius:15px;">
+<br><br>
 
   <a href="https://wa.me/56947510065" target="_blank"
      style="display:block; margin-top:10px; background:#000; color:#fff; padding:10px; border-radius:8px; text-decoration:none;">
      Comprar por WhatsApp
 
+    
     
  
 
