--- a/index.html
+++ b/index.html
@@ -133,11 +133,19 @@
 
   <p>Hecho a mano con amor 💕</p>
         <img src="poncho.png" style="width:300px; max-width:90%; border-radius:15px;">
-<br><br>
-
-  <a href="https://wa.me/56947510065" target="_blank"
+<br><br><a href="https://wa.me/56947510065" target="_blank"
      style="display:block; margin-top:10px; background:#000; color:#fff; padding:10px; border-radius:8px; text-decoration:none;">
      Comprar por WhatsApp
+
+    <br><br>
+<img src="perrito-crochet.png" style="width:300px; max-width:90%; border-radius:15px;">
+<br>
+<h3>Perrito amigurumi</h3>
+<a href="https://wa.me/56947510065" target="_blank"
+   style="display:inline-block; margin-top:10px; background:#000; color:#fff; padding:8px 15px; border-radius:8px; text-decoration:none;">
+   Comprar por WhatsApp
+</a>
+<br><br>
 
     
     
