--- a/index.html
+++ b/index.html
@@ -140,4 +140,14 @@
 <br><br>
 <img src="perrito-crochet.png.jpg" style="width:300px; max-width:90%; border-radius:15px;">
 
+        <br><br>
+<img src="producto3.jpg.jpg" style="width:300px; max-width:90%; border-radius:15px;">
+<br>
+<h3>Producto nuevo</h3>
+<a href="https://wa.me/56947510065" target="_blank"
+   style="display:inline-block; margin-top:10px; background:#000; color:#fff; padding:8px 15px; border-radius:8px; text-decoration:none;">
+   Comprar por WhatsApp
+</a>
+<br><br>
+
  
