--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Productos a crochet hechos a mano | Tienda online</title>
 </head>
 <meta name="google-site-verification" content="EYE07bCPifz5G8cyRsW8pn8DSq8yLi_F7kfKRgH-Hfs" />
+<link rel="icon" type="image/png" href="logo.png.png">
 <body style="font-family:sans-serif; background:#fff0f5; text-align:center; padding:30px">
 
   <h1>Tvillingar</h1>
