--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>
+<head><link rel="icon" type="image/png" href="logo.png.png">
   <meta name="google-site-verification" content="EYE07bCPifz5G8cyRsW8pn8DSq8yLi_F7kfKRgH-Hfs" />
   <meta charset="UTF-8"><meta name="google-site-verification" content="EYE07bCPifz5G8cyRsW8pn8DSq8yLi_F7kfKRgH-Hfs" />
   <title>Productos a crochet hechos a mano | Tienda online</title>
