--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="google-site-verification" content="EYE07bCPifz5G8cyRsW8pn8DSq8yLi_F7kfKRgH-Hfs" />
 <link rel="icon" type="image/png" href="logo.png.png">
 <body style="font-family:sans-serif; background:#fff0f5; text-align:center; padding:30px">
-
+<title>Tejidos Tvillingar | Amigurumis y tejidos a mano en Chile</title>
   <h1>Tvillingar</h1>
   <p>Bienvenido a nuestra tienda 💖</p>
 
