--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     para quienes buscan productos únicos y artesanales.
   </p>
 </section><meta name="keywords" content="productos a crochet, tejidos a mano, crochet chile, regalos tejidos, crochet artesanal, accesorios a crochet">
+  <style>
+img {
+  max-width: 100%;
+  height: auto;
+}
+</style>
 
 
 
