--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Tejidos Tvillingar | Amigurumis y tejidos a mano en Chile</title>
   <h1>Tvillingar</h1>
   <p>Bienvenido a nuestra tienda 💖</p>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <p>Próximamente productos</p><section style="padding:20px; max-width:800px; margin:auto;">
   <p>
     Ofrezco productos a crochet hechos a mano con dedicación y amor.
