--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <link rel="icon" type="image/png" href="logo.png.png">
 <body style="font-family:sans-serif; background:#fff0f5; text-align:center; padding:30px">
 <title>Tejidos Tvillingar | Amigurumis y tejidos a mano en Chile</title>
-  <h1>Tvillingar</h1>
+  <h1>Tvillingar</h1><style>
+img {
+  max-width: 100%;
+  height: auto;
+}
+</style>
   <p>Bienvenido a nuestra tienda 💖</p>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <p>Próximamente productos</p><section style="padding:20px; max-width:800px; margin:auto;">
