--- a/index.html
+++ b/index.html
@@ -160,6 +160,16 @@ img {
 
         <br><br>
 <img src="producto3.jpg.jpg" style="width:300px; max-width:90%; border-radius:15px;">
+        <div style="text-align:center; margin: 40px 0;">
+  <img src="producto5.png" style="width:100%; max-width:300px; height:auto;">
+  <h3>Producto 5</h3>
+  <p>Hermoso tejido hecho a mano con mucho amor 🧶💕</p>
+  <p><strong>$PRECIO</strong></p>
+  <a href="https://wa.me/569XXXXXXXX?text=Hola%20quiero%20comprar%20el%20Producto%205"
+     style="display:inline-block; padding:10px 20px; background-color:#25D366; color:white; text-decoration:none; border-radius:8px;">
+     Comprar por WhatsApp
+  </a>
+</div>
 <br>
 <h3></h3>
 <a href="https://wa.me/56947510065" target="_blank"
