--- a/index.html
+++ b/index.html
@@ -145,28 +145,27 @@ img {
 
   <p>Hecho a mano con amor 💕</p>
         <img src="poncho.png" style="width:300px; max-width:90%; border-radius:15px;">
-<br><br><a href="https://wa.me/56947510065" target="_blank"
+          $70.000
+        <br><br><a href="https://wa.me/56947510065" target="_blank"
      style="display:block; margin-top:10px; background:#000; color:#fff; padding:10px; border-radius:8px; text-decoration:none;">
      Comprar por WhatsApp
 </a>
 <br><br>
         <img src="perrito-crochet.png.jpg" style="width:300px; max-width:90%; border-radius:15px;">
-       
+       $5.000
         <a href="https://wa.me/56947510065" target="_blank"
   style="display:inline-block; margin-top:10px; background:#000; color:#fff; padding:8px 15px; border-radius:8px; text-decoration:none;">
                                                    Comprar por WhatsApp
 </a>
 <br><br>
 
-        <br><br>
-<img src="producto3.jpg.jpg" style="width:300px; max-width:90%; border-radius:15px;">
-        <div style="text-align:center; margin: 40px 0;">
-  <div style="text-align:center; margin: 40px 0;">
-  <img src="producto5.png" style="width:100%; max-width:300px; height:auto;">
-  <h3>Producto 5</h3>
-  <p>Hermoso tejido hecho a mano con mucho amor 🧶💕</p>
-  <a href="https://wa.me/569XXXXXXXX?text=Hola%20quiero%20comprar%20el%20Producto%205"
+        <img src="producto5.png" style="width:100%; max-width:300px; height:auto;">
+  <h3></h3>
+  <p$6.000</p>
+  <a href="https://wa.me/56947510065?text=Hola%20quiero%20comprar%20el%20Producto%205"
      style="display:inline-block; padding:10px 20px; background-color:#25D366; color:white; text-decoration:none; border-radius:8px;">
      Comprar por WhatsApp
   </a>
 </div>
+
+      
